# data-wizard-tool

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
app/: main.py
app/routers/v1/google/: auth.py
data_wizard_tool/: database.py  main.py
data_wizard_tool/config/: config.py
data_wizard_tool/controllers/v1/: security.py
data_wizard_tool/controllers/v1/google/: auth.py  deployments.py
data_wizard_tool/models/: user.py
data_wizard_tool/routers/v1/google/: auth.py
data_wizard_tool/schemas/: user.py
data_wizard_tool/services/: auth.py
data_wizard_tool/services/google/: auth.py  credentials.py
data_wizard_tool/utils/: auth_utils.py  gcp_utils.py
tests/: test_auth.py
