[tool.poetry]
name = "data-wizard-tool"
version = "0.1.0"
description = ""
authors = ["Axel Furlan <axel.furlan95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
google-cloud-storage = "^2.18.2"
google-cloud-container = "^2.52.0"
google-auth = "^2.35.0"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
sqlalchemy = "^2.0.36"
google-cloud-secret-manager = "^2.20.2"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "data_wizard_tool.main:start"
